--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.13.1",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
