Change name for npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-react-dropdown",
+  "name": "simple-react-select-dropdown",
   "version": "1.0.0",
   "description": "A simple react dropdown for form, with select and options html tags.",
   "author": "ShayReichert",
